cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificIntUserDefFuncStatsCheckAssign.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -------------------------------------------------------------------------------------------------------------------------------
  (1/1) Internal user-defined function has a multi-assignment that assigns multiple (non-overlapping) parts of a single variable.
  -------------------------------------------------------------------------------------------------------------------------------
   * In user-defined function "f":
     - d[0], d[1] := 4, 7;
                  ^
   * In user-defined function "g.f":
     - d[0], d[1] := 4, 7;
                  ^
